--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -7,7 +7,14 @@ RUN apt-get update; \
 
 
 RUN apt-get update ;\
-	apt-get install -y default-mysql-server
+	export DEBIAN_FRONTEND=noninteractive;\
+	wget https://dev.mysql.com/get/mysql-apt-config_0.8.13-1_all.deb;\
+	echo 'mysql-apt-config mysql-apt-config/select-server select mysql-5.7' | debconf-set-selections;\
+	apt-get update;\
+	dpkg -i mysql-apt-config*;\
+	apt-get update;\
+	apt-get install -y mysql-server;
+	#apt-get install -y default-mysql-server
 RUN apt-get install -y php7.3-fpm php7.3-cli php7.3-common php7.3-curl php7.3-gd php7.3-mbstring php7.3-mysql php7.3-xml php7.3-xmlrpc php7.3-zip php-curl php-gd php-intl php-mbstring php-soap php-xml php-xmlrpc php-zip
 
 
@@ -24,8 +31,6 @@ COPY srcs .
 #	cp /var/www/html/phpmyadmin/config.sample.inc.php /var/www/html/phpmyadmin/config.inc.php;\
 #	chmod 660 /var/www/html/phpmyadmin/config.inc.php;\
 #	chown -R www-data:www-data /var/www/html/phpmyadmin
-EXPOSE 80 443
-RUN 
-RUN bash install_phpmyadmin.sh
-#RUN bash start_service.sh
-CMD ["nginx", "-g", "daemon off;"]
+EXPOSE 80 443 2376 
+RUN bash install_phpmyadmin.sh ;
+RUN bash start_service.sh
